# VkRenderer

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: shader.frag  shader.vert
cmake/: AddShader.cmake
src/: Application.cpp  Application.h  Util.cpp  Util.h  main.cpp
src/VkRenderer/: VkRenderer.h  VulkanBuffer.h  VulkanInstance.h
